<resources>
    <string name="app_name">Dictionary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_screen">Sign In</string>

    <string name="facebook_app_id">1552621171496604</string>

    <string name="fb_login_protocol_scheme">fb[1552621171496604]</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="all_words">All Words</string>
    <string name="favorites">Favorites</string>
    <string name="recent">Recent</string>
    <string name="title_activity_registration_screen">Sign Up</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="select_gender">Select gender</string>
    <string name="select_date_of_birth">Select date of birth</string>
    <string name="confirm_password">Confirm password</string>

    <string name="cancel">Cancel</string>
    <string name="title_activity_example_screen">ExampleScreen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
